@@ -3,7 +3,13 @@
 # Copyright (c) 2004 Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: tie_log.test,v 1.1 2004/09/20 00:47:34 andreas_kupries Exp $
+# RCS: @(#) $Id: tie_log.test,v 1.2 2004/09/24 04:43:36 andreas_kupries Exp $
+
+if {![package vsatisfies [package provide Tcl] 8.4]} {
+    puts "Aborting tests for snit."
+    puts "Requiring Tcl 8.4, have [package present Tcl]"
+    return
+}
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
