@@ -6,7 +6,13 @@
 # This is a tie for remote array ties, actually using separate
 # processes. This is based on the package "comm", also in Tcllib.
 #
-# RCS: @(#) $Id: tie_rarray_comm.test,v 1.2 2004/09/23 02:03:28 andreas_kupries Exp $
+# RCS: @(#) $Id: tie_rarray_comm.test,v 1.3 2004/09/24 04:43:36 andreas_kupries Exp $
+
+if {![package vsatisfies [package provide Tcl] 8.4]} {
+    puts "Aborting tests for snit."
+    puts "Requiring Tcl 8.4, have [package present Tcl]"
+    return
+}
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
